--- a/Draw.csproj
+++ b/Draw.csproj
@@ -75,6 +75,7 @@
     </Compile>
     <Compile Include="src\GUI\Program.cs" />
     <Compile Include="src\Model\ElipseShape.cs" />
+    <Compile Include="src\Model\GroupShape.cs" />
     <Compile Include="src\Model\RectangleShape.cs" />
     <Compile Include="src\Model\Shape.cs" />
     <Compile Include="src\Model\StarShape.cs" />
